# brainaudio

./: .env.example  .gitignore  README.md  VERIFY_LEFT_CONTEXT_QUICK_START.md  e import Trainer  jarjar.txt  kenlm_install.txt  pyproject.toml  requirements.txt  requirements_brainaudio.txt  requirements_wfst.txt  setup.py  setup.sh  verify_all.sh
.github/: copilot-instructions.md
auto_replication/: gemma_4_31B_coder.md
brainaudio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
code_debugging/: check_datasets.ipynb  cross_participant.ipynb  forced_alignments.ipynb
creating_n_gram_lm/: check_phoneme_data.py  convert_char_lm_to_nemo.py  convert_nemo.py  download_c4.py  download_openwebtxt.py  download_subtitles.py  e  identify_source_lines.py  lm_training_data  load_nemo_lm.ipynb  query_phoneme_lm.py  resume_training.py  run_g2p.py  train_sacremoses.py  train_truecase.py  unigram.py  verify_phonemization.py  word_n_gram_lm.py
data/: c4_filtered_sentences_1.txt  c4_filtered_sentences_1_10k_sample.txt  eval_llm_perplexity.py  eval_ngram_perplexity.py  finetune_llama.py  gemini_sentences.txt  in_domain_ds_clean.txt  merge_transcripts.py  transcripts_all.txt  transcripts_all_24.txt  transcripts_merged.txt
datasets/: README.md  brain2text_2024.py  brain2text_2025.py
docs/: experiments.md  gru_b2t_24_model.md  gru_vs_transformer.md  kv_cache_implementation_plan.md  late_threshold_pruning_plan.md  lm_fusion_architecture.md  ngram_lm_optimization_plan.md  rwkv_lm_fusion_design.md  word_ngram_lm_implementation_plan.md
figure_data/: llm_perplexity.ipynb  utils.py
finetune_llm/: README_corrector.md  eval_llm_general.py  eval_llm_perplexity.py  finetune_gec.py  finetune_gemma.py  finetune_granite.py  finetune_lift.py  finetune_llama.py  finetune_llm.py  finetuning_results.json  generate_corrector_dataset.sh  generate_data_lift.py  generate_gec_data.ipynb  generate_lift_data.ipynb  lift_inference.py  tester.ipynb
format_neural_data/: README.md  brain2text_2024.py  brain2text_2025.py
interspeech/: main.bbl  main.blg  main.tex  template_instructions.tex
logs/: lionel_log.md
models/: base_model.py  gru.py  gru_b2t_24.py  gru_b2t_25.py  transformer.py
notebooks/: caps_puncs.ipynb  caps_puncs.py  check_dataset.ipynb  clean_transcripts.ipynb  compare_configs.ipynb  dataset_statistics.ipynb  embedding.ipynb  encoder_eval.ipynb  kv_cache_design.ipynb  llm.ipynb  nemo_llm.ipynb  ood_valset.ipynb  pyctcdecode.ipynb  results.ipynb  rwkv.ipynb  test_data_formatter.ipynb  test_data_formatter_24.ipynb  (+5 more)
(+2962 files in other folders)
