[project]
name = "brainaudio"
version = "0.1.0"
description = "Code for building algorithms for speech neuroprostheses."
readme = "README.md"
authors = [
    { name = "ebrahimfeghhi", email = "efeghhi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.0",
    "cloudpickle>=3.1.2",
    "edit-distance>=1.0.7",
    "einops>=0.8.1",
    "fiddle>=0.3.0",
    "flashlight-text>=0.0.7",
    "g2p-en>=2.1.0",
    "h5py>=3.14.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.30.1",
    "kaldifst>=1.7.17",
    "lightning>=2.5.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "pyyaml>=6.0.3",
    "riva-asrlib-decoder>=0.4.4",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.57.0",
    "trl>=0.23.1",
    "truecase>=0.0.14",
    "unsloth>=2025.12.5",
    "wandb>=0.22.1",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
